Added video section to the website

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
           <input type="text" placeholder="Enter player's name">
           <button type="submit">Search</button>
         </form>
-      </nav>
+    </nav>
+
+
+    <div class="card">
+        <video src="Manchester-City-lift-trophy.mp4" controls></video>
+
+    </div>
+
       
     
 
