made few changes to the blog div

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="blog-card">
       <h3>MANCHESTER CITY CROWNED 2021/22 PREMIER LEAGUE</h3>
-      <img class="blog-image" src="Project/champions.jpeg">
+      <img class="blog-image" src="/Project/mancity.jpeg">
       <p class="blog-paragraph">For the fourth time in five seasons, Manchester City reigns supreme atop the Premier League table—but it was far from easy.
         Man City won another league title—its second in a row—by overcoming a late two-goal deficit with three goals in five historic minutes to defeat Aston Villa, 3-2, and hold off Liverpool's charge on the final day of the season. It seemed as though City would lose the title after falling behind 2-0 to Villa, but everything changed when İlkay Gündoğan scored in the 76th minute. Two minutes later, Rodri equalized before Gündoğan added his second minutes later that ended up being the title-clincher.
         Man City had left the door open for the Reds by drawing West Ham last weekend and dropping two vital points, and Jürgen Klopp's men took it to the final day with a come-from-behind win at Southampton with a heavily rotated squad on Tuesday. But for the second time in four seasons, they finish one point short of first place.
