Created a function to render player details

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <nav class="nav-bar">
         <h5 class="brand">FLATA</h5>
         <ul>
-          <li><a href="#">HOME</a></li>
-          <li><a href="#">PLAYERS</a></li>
-          <li><a href="#">AWARDS</a></li>
+          <li><a id="link" href="#">HOME</a></li>
+          <li><a id="link" href="#">PLAYERS</a></li>
+          <li><a id="link" href="#">AWARDS</a></li>
         </ul>
         <form>
           <input type="text" placeholder="Enter player's name">
