--- a/index.html
+++ b/index.html
@@ -14,18 +14,17 @@
     <nav class="nav-bar">
         <h5 class="brand">FLATA</h5>
         <ul>
-          <li><a id="link" href="#">HOME</a></li>
-          <li><a id="link" href="#">PLAYERS</a></li>
-          <li><a id="link" href="#">AWARDS</a></li>
+          <li id="players-list" class="players-list"><a class="link" href="#">PLAYERS</a></li>
+          <li id="voting" class="players-list"><a class="link" id="link2" href="#">AWARDS</a></li>
         </ul>
         <form>
-          <input type="text" placeholder="Enter player's name">
-          <button type="submit">Search</button>
+          <input id="input" class="input" type="text" placeholder="Enter player's name">
+          <button id="button" class="button" type="submit">Search</button>
         </form>
     </nav>
 
-    <div class="blog-card">
-      <h3>MANCHESTER CITY CROWNED 2021/22 PREMIER LEAGUE</h3>
+    <div class="blog-card" id="blog">
+      <h3 class="headers">MANCHESTER CITY CROWNED 2021/22 PREMIER LEAGUE</h3>
       <img class="blog-image" src="/Project/mancity.jpeg">
       <p class="blog-paragraph">For the fourth time in five seasons, Manchester City reigns supreme atop the Premier League table—but it was far from easy.
         Man City won another league title—its second in a row—by overcoming a late two-goal deficit with three goals in five historic minutes to defeat Aston Villa, 3-2, and hold off Liverpool's charge on the final day of the season. It seemed as though City would lose the title after falling behind 2-0 to Villa, but everything changed when İlkay Gündoğan scored in the 76th minute. Two minutes later, Rodri equalized before Gündoğan added his second minutes later that ended up being the title-clincher.
@@ -38,8 +37,8 @@ City lost just three times in league play, twice to Tottenham—the first time c
       </p>
     </div>
 
-    <div class="video-card">
-      <h3 class="header">Manchester City lifting the premier league Trophy </h3>  
+    <div class="video-card" id="video">
+      <h3 class="headers">Manchester City lifting the premier league Trophy </h3>  
       <video src="Manchester-City-lift-trophy.mp4" controls></video>
 
     </div>
