added a login page

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
           <li id="voting" class="players-list"><a class="link" id="link2" href="#">AWARDS</a></li>
         </ul>
         <form>
-          <input id="input" class="input" type="text" placeholder="Enter player's name">
-          <button id="button" class="button" type="submit">Search</button>
+          <input id="input" class="input" type="search" placeholder="Enter player's name">
+          <button id="button" class="button" type="search">Search</button>
         </form>
+        <button id="login-btn" class="login-btn"><a href="#">LOGIN</a></button>
     </nav>
 
     <div class="blog-card" id="blog">
@@ -48,6 +49,17 @@
       <h3 class="vote-headers font">VOTE FOR THE PLAYER OF THE SEASON</h3>
       <P class="vote-headers font">The following players were the best among the squad due to perfomance in the field.</P>
       <p class="vote-headers font">Vote for the one you think performed the most</p>
+    </div>
+
+    <div id="login-div" class="login-div">
+      <form class="login-form">
+        <h1 class="font">WELCOME BACK!</h1>
+        <p class="login-p font">ENTER USERNAME:</p>
+        <input class="login-input font" id="user-input" type="text" placeholder="Username">
+        <P class="login-p font">ENTER PASSWORD:</P>
+        <input class="login-input font" id="password" type="text" placeholder="Password">
+        <button id="login" type="submit" class="login font">Login</button>
+      </form>
     </div>
 
 
