--- a/index.html
+++ b/index.html
@@ -10,32 +10,28 @@
 
 </head>
 <body>
-
+  <div class="main-div" id="main-div">
     <nav class="nav-bar">
         <h5 class="brand">FLATA</h5>
         <ul>
           <li id="players-list" class="players-list"><a class="link" href="#">PLAYERS</a></li>
           <li id="voting" class="players-list"><a class="link" href="#">AWARDS</a></li>
+          <li id="login-btn" class="players-list"><a class="link" href="#">LOGIN</a></li>
         </ul>
         <form>
           <input id="input" class="input" type="text" placeholder="Enter player's name">
           <button id="button" class="button" type="button">Search</button>
         </form>
-        <button id="login-btn" class="login-btn"><a href="#">LOGIN</a></button>
     </nav>
 
     <div class="blog-card" id="blog">
       <h3 class="headers">MANCHESTER CITY CROWNED 2021/22 PREMIER LEAGUE</h3>
       <img class="blog-image" src="/Project/mancity.jpeg">
       <p class="blog-paragraph">For the fourth time in five seasons, Manchester City reigns supreme atop the Premier League table—but it was far from easy.
-        Man City won another league title—its second in a row—by overcoming a late two-goal deficit with three goals in five historic minutes to defeat Aston Villa, 3-2, and hold off Liverpool's charge on the final day of the season. It seemed as though City would lose the title after falling behind 2-0 to Villa, but everything changed when İlkay Gündoğan scored in the 76th minute. Two minutes later, Rodri equalized before Gündoğan added his second minutes later that ended up being the title-clincher.</p>
-      <p class="blog-paragraph">Man City had left the door open for the Reds by drawing West Ham last weekend and dropping two vital points, and Jürgen Klopp's men took it to the final day with a come-from-behind win at Southampton with a heavily rotated squad on Tuesday. But for the second time in four seasons, they finish one point short of first place.
-        The result ends Liverpool's quest for what would have been a historic quadruple, with the club already having won the League Cup and FA Cup titles (beating Chelsea in penalty shootouts for both domestic trophies) while also advancing to the Champions League final. It'll play Real Madrid for the European title in Paris on May 28.</p>
-
-      <p class="blog-paragraph"> Man City would likely trade places with Liverpool given its insatiable quest to become European champion, but it'll instead settle for another English title achievement. The title is its sixth in the Premier League era and eighth overall, snapping a tie with Aston Villa for fourth-most in history. With Erling Haaland due to join next season following a transfer from Borussia Dortmund, that number could continue to grow rapidly in the coming years.
-      This season's success was achieved without a star striker, though. Man City didn't replace Sergio Agüero, with its summer overtures to sign Harry Kane from Tottenham proving unsuccessful. Pep Guardiola's side has still managed to score a league-high 99 goals, paced by Kevin De Bruyne's 15, Raheem Sterling's 13 and Riyad Mahrez's 11. Phil Foden (nine), Gabriel Jesus and Bernardo Silva (eight) also were key contributors, though half of Jesus's total came in a win over relegated Watford.</p>
-
-      <p class="blog-paragraph">The Brazilian, who has been linked with an exit to Arsenal, tied with De Bruyne for the club lead in assists with eight. City's marquee summer signing, £100 million man Jack Grealish, didn't factor much into the club's success, scoring just three goals in league play. One of those was a big one, though, helping spark the comeback from 2-0 down to West Ham on Sunday to salvage the point that put the club in position to clinch Tuesday.
+        Man City won another league title—its second in a row—by overcoming a late two-goal deficit with three goals in five historic minutes to defeat Aston Villa, 3-2, and hold off Liverpool's charge on the final day of the season. It seemed as though City would lose the title after falling behind 2-0 to Villa, but everything changed when İlkay Gündoğan scored in the 76th minute. Two minutes later, Rodri equalized before Gündoğan added his second minutes later that ended up being the title-clincher.
+      
+        The result ends Liverpool's quest for what would have been a historic quadruple, with the club already having won the League Cup and FA Cup titles (beating Chelsea in penalty shootouts for both domestic trophies) while also advancing to the Champions League final. It'll play Real Madrid for the European title in Paris on May 28.
+ 
       City lost just three times in league play, twice to Tottenham—the first time coming in the first game of the season—and once to Crystal Palace, which also held City to a draw in their other meeting. The club took points off every other team in the league, though and at one point had a 12-match winning streak that ultimately fortified its place atop the table.
       </p>
     </div>
@@ -60,6 +56,8 @@
         <input class="login-input font" id="password" type="text" placeholder="Password">
         <button id="login" type="submit" class="login font">Login</button>
       </form>
+    </div>
+
     </div>
 
 
