adjusting the nav bar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 </head>
 <body>
-  <div class="main-div" id="main-div">
     <nav class="nav-bar">
         <h5 class="brand">FLATA</h5>
         <ul>
@@ -23,8 +22,7 @@
           <button id="button" class="button" type="button">Search</button>
         </form>
     </nav>
-
-    <div class="blog-card" id="blog">
+    <div id="blog" class="blog-card">
       <h3 class="headers">MANCHESTER CITY CROWNED 2021/22 PREMIER LEAGUE</h3>
       <img class="blog-image" src="/Project/mancity.jpeg">
       <p class="blog-paragraph">For the fourth time in five seasons, Manchester City reigns supreme atop the Premier League table—but it was far from easy.
@@ -58,7 +56,6 @@
       </form>
     </div>
 
-    </div>
 
 
       
