--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
       <video src="Manchester-City-lift-trophy.mp4" controls></video>
     </div>
 
+    <div class = "feedback-card">
+      <h3 class="font f-head">FEEDBACK</h3>
+      <form class="f-form">
+        <input class="font f1-input" type="text" placeholder="Your Opinion">
+        <input class="font f2-input" type="text" placeholder="Why do you feel so?">
+        <button class="font f-btn" type="button">SUBMIT</button>
+      </form>
+    </div>
+
     <div id="vote-header" class="vote-header">
       <h3 class="vote-headers font">VOTE FOR THE PLAYER OF THE SEASON</h3>
       <P class="vote-headers font">The following players were the best among the squad due to perfomance in the field.</P>
