--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav class="nav-bar">
-      <h5 class="brand">FLATA</h5>
+      <h5 id="flata" class="brand">FLATA</h5>
       <ul>
         <li id="players-list" class="players-list"><a class="link" href="#">PLAYERS</a></li>
         <li id="voting" class="players-list"><a class="link" href="#">AWARDS</a></li>
@@ -38,12 +38,12 @@
       <video src="Manchester-City-lift-trophy.mp4" controls></video>
     </div>
 
-    <div class = "feedback-card">
+    <div class = "feedback-card" id="feedback-card">
       <h3 class="font f-head">FEEDBACK</h3>
-      <form class="f-form">
-        <input class="font f1-input" type="text" placeholder="Your Opinion">
-        <input class="font f2-input" type="text" placeholder="Why do you feel so?">
-        <button class="font f-btn" type="button">SUBMIT</button>
+      <form id="fbform" class="f-form">
+        <input id="input1" class="font f1-input" type="text" placeholder="Your Opinion">
+        <input id="input2" class="font f2-input" type="text" placeholder="Why do you feel so?">
+        <button id="fbbtn" class="font f-btn" type="button">SUBMIT</button>
       </form>
     </div>
 
