adding feedback page

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 </head>
 <body>
     <nav class="nav-bar">
-      <h5 id="flata" class="brand">FLATA</h5>
+      <h1 class="brand" id="flata"> FLATA</h1>
       <ul>
         <li id="players-list" class="players-list"><a class="link" href="#">PLAYERS</a></li>
         <li id="voting" class="players-list"><a class="link" href="#">AWARDS</a></li>
+        <li id="fb-page" class="players-list"><a class="link" href="#">FEEDBACK</a></li>
         <li id="login-btn" class="players-list"><a class="link" href="#">LOGIN</a></li>
       </ul>
       <form>
@@ -35,7 +36,7 @@
 
     <div class="video-card" id="video">
       <h3 class="headers">Manchester City lifting the premier league Trophy </h3>  
-      <video src="Manchester-City-lift-trophy.mp4" controls></video>
+      <video src="/vids/Manchester-City-lift-trophy.mp4" controls></video>
     </div>
 
     <div class = "feedback-card" id="feedback-card">
